--- a/app/src/main/res/drawable/custom_bet_list_tab_indicator.xml
+++ b/app/src/main/res/drawable/custom_bet_list_tab_indicator.xml
@@ -4,17 +4,17 @@
     <item android:gravity="center">
         <shape>
             <size
-                android:width="42dp"
-                android:height="3dp" />
+                android:width="62dp"
+                android:height="2dp" />
             <corners
-                android:bottomLeftRadius="0dp"
-                android:bottomRightRadius="0dp"
-                android:topLeftRadius="100dp"
-                android:topRightRadius="100dp" />
+                android:bottomLeftRadius="1dp"
+                android:bottomRightRadius="1dp"
+                android:topLeftRadius="1dp"
+                android:topRightRadius="1dp" />
             <gradient
                 android:angle="135"
-                android:startColor="#ff3b78ff"
-                android:endColor="#ff0065e9"
+                android:startColor="@color/color_025BE8"
+                android:endColor="@color/color_025BE8"
                 android:type="linear"
                 android:useLevel="true" />
         </shape>
