--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -3,18 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/color_FFFFFF">
 
     <LinearLayout
+        android:id="@+id/lin_sport_title"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/color_F3F9FF"
-        android:paddingHorizontal="@dimen/margin_15"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="10dp">
 
-        <ImageView
-            android:id="@+id/iv_sport"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/color_F3F9FF"
+            android:paddingHorizontal="@dimen/margin_15"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_sport"
+                android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_home_football_sel" />
@@ -39,20 +47,24 @@
             android:layout_height="20dp"
             android:src="@drawable/selector_arrow_blue_double" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/color_E8EFFD" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/color_E8EFFD" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_league"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/color_FFFFFF"
         android:paddingHorizontal="@dimen/margin_14"
-        android:paddingVertical="@dimen/margin_10"
-        android:background="@color/color_F6FBFF"
+        android:paddingBottom="@dimen/margin_10"
         tools:listitem="@layout/item_sport_favorite"
         tools:itemCount="1" />
 </LinearLayout>
+
+
